--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "solution/tc_project_app/tc_mca_std_lib"]
 	path = solution/tc_project_app/tc_mca_std_lib
-	url = https://bitbucket.org/europeanspallationsource/tc_mca_std_lib.git
+	url = https://smc-scooper@bitbucket.org/europeanspallationsource/tc_mca_std_lib.git
